--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -20,6 +20,7 @@ section#formularioGoogle {
     grid-template-columns: auto;
     grid-template-rows: auto auto auto;
     justify-content: center;
+    margin: 10px;
 }
 
 iframe#google {
